# EM-FEM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.MD  coarse.msh  pyproject.toml  requirements-dev.txt  requirements.txt
archived/: 1.py  Lipo_archive.m  solver.py  test0.py  test1.py  test2.py
archived/docs/: test_synrm.md
coarse/: trigInfo.csv
data/: test-DI_Chong.geo  test-DI_Chong.msh  test-T_A_Lipo.geo  test.geo  test.msh
data/coarse/: mesh_data_coarse_noslide.mat  synrm_coarse.nas  vertInfo.csv
data/extraFine/: vertInfo.csv
data/lipo/: A_mat_inductor.npy  S-matlab-const_miu.csv  S-py-const_miu.csv  test-T_A_Lipo.geo  test-T_A_Lipo.msh  trigInfo.csv  vertInfo.csv  vertInfoMat_inductor.npy
data/synrm/: A_mat_synrm.npy  A_mat_synrm_23.npy  A_mat_synrm_45.npy  A_mat_synrm_same.npy  synrm_circular.geo  synrm_circular.msh  vertInfoMat_synrm.npy
data/test_sym_bc/: test_sym_bc.geo  test_sym_bc.msh
docs/: index.md  test_inductor.md  test_lipo.md  test_synrm.md
docs/test_inductor/: inductor.ans  inductor.fem
docs/test_synrm/: synrm_circular.ans  synrm_circular.fem
dxf2geo/: .gitignore  README.md
extraFine/: mesh_data_extrafine_noslide.mat  trigInfo.csv
mat-diff/: README.md  main.py
mat-diff/data/: A-matlab.csv  A-python.csv  S-matlab.csv  S-python-v0.csv  T-matlab.csv  T-python.csv
src/: compare_synrm.py  logger.py  main.py  material.py  mesh.py  plot.py  read_mesh.py  solver.py  test.py  test2.py  test3.py  test3_read_lipo.py  test4.py  test_inductor.py  test_lipo.py  test_sym_bc.py  test_symrm.py  test_synrm.py  utils.py
